# rnn

./: .gitignore  README  rnn.cabal
exe/: main.hs
src/AI/Network/: RNN.hs
src/AI/Network/RMM/: LSTM.hs
src/AI/Network/RNN/: Data.hs  Expr.hs  Genetic.hs  LSTM.hs  RNN.hs  Types.hs  Util.hs
test/: rnn-test.hs
