name: rnn
version: 0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) JP Moresmau
maintainer: JP Moresmau <jp@moresmau.fr>
stability: experimental
synopsis: Playing with recurrent neural networks
description:
    Playing with recurrent neural networks
category: AI
author: JP Moresmau

library
    exposed-modules:
        AI.Network.RNN
    build-depends:
        base >=4.2 && <5,
        hmatrix >=0.17,
        vector -any,
        simple-genetic-algorithm-mr -any,
        deepseq -any,
        MonadRandom >=0.2,
        text -any,
        containers -any,
        ad -any,
        parallel -any,
        sdr -any,
        binary -any,
        bytestring -any
    hs-source-dirs: src
    other-modules:
        AI.Network.RNN.Expr
        AI.Network.RNN.RNN
        AI.Network.RNN.Genetic
        AI.Network.RNN.Data
        AI.Network.RNN.LSTM
        AI.Network.RNN.Types
        AI.Network.RNN.Util
    ghc-options: -fprof-auto -O2

executable rnn
    main-is: main.hs
    build-depends:
        base >=4.2 && <5,
        rnn -any,
        hmatrix -any,
        vector -any,
        simple-genetic-algorithm-mr -any,
        deepseq -any,
        MonadRandom >=0.2,
        text -any,
        containers -any,
        directory -any,
        ad -any,
        parallel -any,
        sdr -any,
        binary -any,
        bytestring -any
    hs-source-dirs: exe
    ghc-options: -Wall -rtsopts -O2 -fprof-auto -threaded

test-suite rnn-test
    type: exitcode-stdio-1.0
    main-is: rnn-test.hs
    build-depends:
        base >=4,
        tasty >0.10,
        tasty-hunit -any,
        tasty-quickcheck -any,
        HUnit -any,
        QuickCheck -any,
        hmatrix -any,
        vector -any,
        simple-genetic-algorithm-mr -any,
        deepseq -any,
        MonadRandom >=0.2,
        text -any,
        containers -any,
        ad -any,
        parallel -any,
        sdr -any,
        binary -any,
        bytestring -any
    hs-source-dirs: test src
    other-modules:
        AI.Network.RNN.Expr
        AI.Network.RNN.LSTM
        AI.Network.RNN.RNN
        AI.Network.RNN.Data
        AI.Network.RNN.Genetic
        AI.Network.RNN.Util
        AI.Network.RNN.Types
    ghc-options: -Wall -rtsopts -threaded -O2
